Fixed text wrapping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,7 +25,6 @@ a:hover, a:focus {
 .card {
     margin-top: 3%;
     background-color: #FFFFFF;
-    max-width: 90%;
     border-radius: 6px;
     border: 1px solid #ABABAB;
     box-shadow: 0px 3px 10px #888888;
